--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,14 @@
 @import "tailwindcss";
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#root {
+  height: 100vh;
 }
 
 body {
   margin: 0;
+  height: 100vh;
+}
+
+input[type="checkbox"] {
+  accent-color: color-mix(in oklab, var(--color-white) /* #fff = #ffffff */ 30%, transparent);
 }
